--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <section class="contenedor-tarjetas">
     <!-- Tarjeta 1 -->
     <a href="recetas1.html" class="tarjeta">
-      <img src="img/recetas.jpg" alt="Recetas Saludables">
+      <img src="img/primeroslogo.jpg" alt="Recetas Saludables">
       <h2>Pimeros Auxilios</h2>
       <p>Explora y aprende como actuar ante diferentes escensarios.</p>
     </a>
@@ -49,3 +49,4 @@
 
 </body>
 </html>
+
