--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <a href="recetas1.html" class="tarjeta">
       <img src="img/primeroslogo.jpg" alt="Recetas Saludables">
       <h2>Pimeros Auxilios</h2>
-      <p>Explora y aprende como actuar ante diferentes escensarios.</p>
+      <p>Explora y aprende como actuar ante diferentes escenarios.</p>
     </a>
 
   </section>
@@ -49,4 +49,5 @@
 
 </body>
 </html>
+
 
